use std::collections::{HashMap, HashSet, BTreeMap};
use uuid::Uuid;
use serde::{Serialize, Deserialize};
use thiserror::Error;
use tokio::sync::RwLock;
use async_trait::async_trait;
use petgraph::graph::{Graph, NodeIndex};
use petgraph::algo::{toposort, dijkstra};
use rand::distributions::{WeightedIndex, Distribution};
use std::sync::Arc;
use chrono::{DateTime, Utc, Duration};
use futures::stream::StreamExt;

use crate::node::{NodeId, NodeCapabilities, NodeInfo};
use crate::operator::{Operator, OperatorError, DataPoint};
use crate::topology_manager::TopologyManager;
use crate::state_manager::{StateManager, StateType};
use crate::time_manager::TimeManager;
use crate::metrics_collector::MetricsCollector;

pub struct Pipeline {
    pub id: Uuid,
    pub name: String,
    pub stages: Vec<Stage>,
    pub input_streams: Vec<StreamDefinition>,
    pub output_streams: Vec<StreamDefinition>,
}

pub struct Stage {
    pub id: Uuid,
    pub name: String,
    pub operation: Operation,
    pub inputs: Vec<StageInput>,
    pub output: StageOutput,
}

pub struct PipelineSubmission {
    pub pipeline: Pipeline,
    pub priority: Priority,
    pub latency_requirements: LatencyRequirements,
}

pub enum Priority {
    Low,
    Medium,
    High,
    Critical,
}

pub struct LatencyRequirements {
    pub max_end_to_end_latency: Duration,
    pub stage_latencies: HashMap<Uuid, Duration>,
}

pub struct PipelineUpdateRequest {
    pub pipeline_id: Uuid,
    pub update_type: PipelineUpdateType,
    pub updated_pipeline: Option<Pipeline>,
}

pub enum PipelineUpdateType {
    Modify,
    Pause,
    Resume,
    Stop,
}

#[derive(Error, Debug)]
pub enum PipelineError {
    #[error("Pipeline not found: {0}")]
    PipelineNotFound(Uuid),
    #[error("Invalid pipeline: {0}")]
    InvalidPipeline(String),
    #[error("Optimization error: {0}")]
    OptimizationError(String),
    #[error("Distribution error: {0}")]
    DistributionError(String),
    #[error("Execution error: {0}")]
    ExecutionError(String),
    #[error("State error: {0}")]
    StateError(#[from] crate::state_manager::StateError),
}

pub struct PipelineManager {
    pipelines: RwLock<HashMap<Uuid, Pipeline>>,
    optimizer: Arc<QueryOptimizer>,
    distributor: Arc<PipelineDistributor>,
    topology_manager: Arc<TopologyManager>,
}

impl PipelineManager {
    pub fn new(
        optimizer: Arc<QueryOptimizer>,
        distributor: Arc<PipelineDistributor>,
        topology_manager: Arc<TopologyManager>,
    ) -> Self {
        PipelineManager {
            pipelines: RwLock::new(HashMap::new()),
            optimizer,
            distributor,
            topology_manager,
        }
    }

    pub async fn add_pipeline(&self, pipeline: Pipeline) -> Result<(), PipelineError> {
        self.validate_pipeline(&pipeline)?;
        let optimized_pipeline = self.optimizer.optimize(pipeline).await?;
        let distribution_plan = self.distribute_pipeline(&optimized_pipeline).await?;
        self.deploy_pipeline(&optimized_pipeline, &distribution_plan).await?;
        self.pipelines.write().await.insert(optimized_pipeline.id, optimized_pipeline);
        Ok(())
    }

    pub async fn get_pipeline(&self, id: &Uuid) -> Option<Pipeline> {
        self.pipelines.read().await.get(id).cloned()
    }

    pub async fn remove_pipeline(&self, id: &Uuid) -> Option<Pipeline> {
        let mut pipelines = self.pipelines.write().await;
        let pipeline = pipelines.remove(id);
        if let Some(pipeline) = &pipeline {
            self.undeploy_pipeline(pipeline).await.ok();
        }
        pipeline
    }

    async fn validate_pipeline(&self, pipeline: &Pipeline) -> Result<(), PipelineError> {
        let graph = self.build_pipeline_graph(pipeline);
        if petgraph::algo::is_cyclic_directed(&graph) {
            return Err(PipelineError::InvalidPipeline("Pipeline contains cycles".to_string()));
        }
        if let Err(err) = toposort(&graph, None) {
            return Err(PipelineError::InvalidPipeline(format!("Invalid pipeline structure: {}", err)));
        }
        Ok(())
    }

    async fn distribute_pipeline(&self, pipeline: &Pipeline) -> Result<DistributionPlan, PipelineError> {
        let nodes = self.topology_manager.get_all_nodes().await;
        self.distributor.distribute(pipeline, &nodes).await
            .map_err(|e| PipelineError::DistributionError(e.to_string()))
    }

    async fn deploy_pipeline(&self, pipeline: &Pipeline, distribution_plan: &DistributionPlan) -> Result<(), PipelineError> {
        for (node_id, stages) in &distribution_plan.node_assignments {
            let node_info = self.topology_manager.get_node(node_id).await
                .ok_or_else(|| PipelineError::DistributionError(format!("Node not found: {}", node_id)))?;
            self.deploy_stages_to_node(&node_info, pipeline, stages).await?;
        }
        Ok(())
    }

    async fn deploy_stages_to_node(&self, node_info: &NodeInfo, pipeline: &Pipeline, stage_ids: &[Uuid]) -> Result<(), PipelineError> {
        let stages: Vec<_> = stage_ids.iter()
            .filter_map(|id| pipeline.stages.iter().find(|s| &s.id == id))
            .cloned()
            .collect();

        // In a real implementation, this would involve sending a gRPC request to the node
        // with the stage information. For now, we'll just simulate this.
        println!("Deploying stages {:?} to node {}", stage_ids, node_info.id);
        Ok(())
    }

    async fn undeploy_pipeline(&self, pipeline: &Pipeline) -> Result<(), PipelineError> {
        let nodes = self.topology_manager.get_all_nodes().await;
        for node in nodes {
            // In a real implementation, this would involve sending a gRPC request to the node
            // to stop and remove the pipeline stages. For now, we'll just simulate this.
            println!("Undeploying pipeline {} from node {}", pipeline.id, node.id);
        }
        Ok(())
    }

    fn build_pipeline_graph(&self, pipeline: &Pipeline) -> Graph<&Stage, ()> {
        let mut graph = Graph::new();
        let mut node_map = HashMap::new();

        for stage in &pipeline.stages {
            let node_index = graph.add_node(stage);
            node_map.insert(stage.id, node_index);
        }

        for stage in &pipeline.stages {
            for input in &stage.inputs {
                if let InputSource::Stage(input_stage_id) = input.source {
                    if let Some(&input_node) = node_map.get(&input_stage_id) {
                        let current_node = node_map[&stage.id];
                        graph.add_edge(input_node, current_node, ());
                    }
                }
            }
        }

        graph
    }
}

pub struct QueryOptimizer {
    state_manager: Arc<StateManager>,
}

impl QueryOptimizer {
    pub fn new(state_manager: Arc<StateManager>) -> Self {
        Self { state_manager }
    }

    pub async fn optimize(&self, mut pipeline: Pipeline) -> Result<Pipeline, PipelineError> {
        let mut graph = self.build_operator_graph(&pipeline);
        
        self.apply_predicate_pushdown(&mut graph);
        self.apply_operator_fusion(&mut graph);
        self.reorder_joins(&mut graph).await?;
        
        pipeline.stages = self.graph_to_stages(graph);
        Ok(pipeline)
    }

    fn apply_predicate_pushdown(&self, graph: &mut Graph<&Stage, ()>) {
        // Implement predicate pushdown logic
        // This involves moving filter operations as close to the data sources as possible
        unimplemented!()
    }

    fn apply_operator_fusion(&self, graph: &mut Graph<&Stage, ()>) {
        // Implement operator fusion logic
        // This involves combining adjacent operators when possible to reduce data movement
        unimplemented!()
    }

    async fn reorder_joins(&self, graph: &mut Graph<&Stage, ()>) -> Result<(), PipelineError> {
        // Implement join reordering based on cardinality estimates
        // This involves estimating the size of intermediate results and reordering joins to minimize these
        unimplemented!()
    }

    fn graph_to_stages(&self, graph: Graph<&Stage, ()>) -> Vec<Stage> {
        // Convert optimized graph back to stages
        unimplemented!()
    }
}

pub struct PipelineDistributor {
    topology_manager: Arc<TopologyManager>,
    state_manager: Arc<StateManager>,
}

impl PipelineDistributor {
    pub fn new(topology_manager: Arc<TopologyManager>, state_manager: Arc<StateManager>) -> Self {
        Self { topology_manager, state_manager }
    }

    pub async fn distribute(&self, pipeline: &Pipeline, nodes: &[NodeInfo]) -> Result<DistributionPlan, PipelineError> {
        let stage_costs = self.estimate_stage_costs(pipeline).await?;
        let node_capacities = self.estimate_node_capacities(nodes).await?;
        
        let distribution = self.solve_distribution_problem(stage_costs, node_capacities)?;
        
        Ok(DistributionPlan { node_assignments: distribution })
    }

    pub async fn redistribute(&self, pipeline: &Pipeline, bottleneck_stages: &HashSet<Uuid>, nodes: &[NodeInfo]) -> Result<DistributionPlan, PipelineError> {
        let mut stage_costs = self.estimate_stage_costs(pipeline).await?;
        let node_capacities = self.estimate_node_capacities(nodes).await?;
        
        // Increase cost estimates for bottleneck stages to encourage redistribution
        for stage_id in bottleneck_stages {
            if let Some(cost) = stage_costs.get_mut(stage_id) {
                *cost *= 2.0
            }
        }
        
        let distribution = self.solve_distribution_problem(stage_costs, node_capacities)?;
        
        Ok(DistributionPlan { node_assignments: distribution })
    }

    async fn estimate_stage_costs(&self, pipeline: &Pipeline) -> Result<HashMap<Uuid, f64>, PipelineError> {
        let mut costs = HashMap::new();
        for stage in &pipeline.stages {
            let cost = match &stage.operation {
                Operation::Filter(_) => 1.0,
                Operation::Map(_) => 2.0,
                Operation::Aggregate(_) => 5.0,
                Operation::Join(_) => 10.0,
                Operation::Window(_) => 7.0,
                Operation::CEP(_) => 15.0,
                Operation::Shuffle(_) => 3.0,
            };
            costs.insert(stage.id, cost);
        }
        Ok(costs)
    }

    async fn estimate_node_capacities(&self, nodes: &[NodeInfo]) -> Result<HashMap<NodeId, f64>, PipelineError> {
        let mut capacities = HashMap::new();
        for node in nodes {
            let capacity = node.capabilities.cpu_cores as f64 * node.capabilities.memory_gb;
            capacities.insert(node.id, capacity);
        }
        Ok(capacities)
    }

    fn solve_distribution_problem(&self, stage_costs: HashMap<Uuid, f64>, node_capacities: HashMap<NodeId, f64>) -> Result<HashMap<NodeId, Vec<Uuid>>, PipelineError> {
        let mut distribution = HashMap::new();
        let mut remaining_capacity: Vec<(NodeId, f64)> = node_capacities.into_iter().collect();
        
        for (stage_id, cost) in stage_costs.iter() {
            remaining_capacity.sort_by(|a, b| b.1.partial_cmp(&a.1).unwrap());
            if let Some((node_id, capacity)) = remaining_capacity.first_mut() {
                distribution.entry(*node_id).or_insert_with(Vec::new).push(*stage_id);
                *capacity -= cost;
            } else {
                return Err(PipelineError::DistributionError("Insufficient node capacity".to_string()));
            }
        }
        
        Ok(distribution)
    }
}

#[derive(Clone, Debug)]
pub struct DistributionPlan {
    pub node_assignments: HashMap<NodeId, Vec<Uuid>>,
}

// Helper functions for creating pipeline components
pub fn create_filter_stage(name: String, condition: String, input: StageInput) -> Stage {
    Stage {
        id: Uuid::new_v4(),
        name,
        operation: Operation::Filter(FilterOperation { condition }),
        inputs: vec![input],
        output: StageOutput {
            stream_id: Uuid::new_v4(),
            schema: input.schema.clone(), // Filter doesn't change schema
        },
    }
}

pub fn create_map_stage(name: String, transformation: String, input: StageInput, output_schema: Schema) -> Stage {
    Stage {
        id: Uuid::new_v4(),
        name,
        operation: Operation::Map(MapOperation { transformation }),
        inputs: vec![input],
        output: StageOutput {
            stream_id: Uuid::new_v4(),
            schema: output_schema,
        },
    }
}

pub fn create_window_stage(name: String, window_type: WindowType, aggregation: String, input: StageInput, output_schema: Schema) -> Stage {
    Stage {
        id: Uuid::new_v4(),
        name,
        operation: Operation::Window(WindowOperation { window_type, aggregation }),
        inputs: vec![input],
        output: StageOutput {
            stream_id: Uuid::new_v4(),
            schema: output_schema,
        },
    }
}

pub fn create_join_stage(name: String, join_type: JoinType, condition: String, left_input: StageInput, right_input: StageInput, output_schema: Schema) -> Stage {
    Stage {
        id: Uuid::new_v4(),
        name,
        operation: Operation::Join(JoinOperation { join_type, condition }),
        inputs: vec![left_input, right_input],
        output: StageOutput {
            stream_id: Uuid::new_v4(),
            schema: output_schema,
        },
    }
}

#[derive(Clone, Debug, Serialize, Deserialize)]
pub struct FilterOperation {
    pub condition: String,
}

#[derive(Clone, Debug, Serialize, Deserialize)]
pub struct MapOperation {
    pub transformation: String,
}

#[derive(Clone, Debug, Serialize, Deserialize)]
pub struct WindowOperation {
    pub window_type: WindowType,
    pub aggregation: String,
}

#[derive(Clone, Debug, Serialize, Deserialize)]
pub enum WindowType {
    Tumbling(Duration),
    Sliding { window: Duration, slide: Duration },
    Session { gap: Duration },
}

#[derive(Clone, Debug, Serialize, Deserialize)]
pub struct JoinOperation {
    pub join_type: JoinType,
    pub condition: String,
}

#[derive(Clone, Debug, Serialize, Deserialize)]
pub enum JoinType {
    Inner,
    LeftOuter,
    RightOuter,
    FullOuter,
}

#[derive(Clone, Debug, Serialize, Deserialize)]
pub struct CEPOperation {
    pub pattern: String,
}

#[derive(Clone, Debug, Serialize, Deserialize)]
pub struct ShuffleOperation {
    pub partition_key: String,
}

impl PipelineManager {
    pub async fn start_pipeline(&self, pipeline_id: Uuid) -> Result<(), PipelineError> {
        let pipeline = self.get_pipeline(&pipeline_id).await
            .ok_or_else(|| PipelineError::PipelineNotFound(pipeline_id))?;
        
        let distribution_plan = self.distribute_pipeline(&pipeline).await?;
        self.deploy_pipeline(&pipeline, &distribution_plan).await?;
        
        // Start monitoring the pipeline
        self.start_pipeline_monitoring(pipeline_id).await?;
        
        Ok(())
    }

    pub async fn stop_pipeline(&self, pipeline_id: Uuid) -> Result<(), PipelineError> {
        let pipeline = self.get_pipeline(&pipeline_id).await
            .ok_or_else(|| PipelineError::PipelineNotFound(pipeline_id))?;
        
        self.undeploy_pipeline(&pipeline).await?;
        
        // Stop monitoring the pipeline
        self.stop_pipeline_monitoring(pipeline_id).await?;
        
        Ok(())
    }

    async fn start_pipeline_monitoring(&self, pipeline_id: Uuid) -> Result<(), PipelineError> {
        // Set up periodic monitoring tasks
        tokio::spawn(async move {
            let mut interval = tokio::time::interval(Duration::seconds(10));
            loop {
                interval.tick().await;
                if let Err(e) = self.collect_pipeline_metrics(pipeline_id).await {
                    eprintln!("Error collecting pipeline metrics: {}", e);
                }
                if let Err(e) = self.handle_backpressure(pipeline_id).await {
                    eprintln!("Error handling backpressure: {}", e);
                }
            }
        });
        Ok(())
    }

    async fn stop_pipeline_monitoring(&self, pipeline_id: Uuid) -> Result<(), PipelineError> {
        // In a real implementation, you would need to cancel the monitoring task
        // For simplicity, we'll just assume it stops immediately
        Ok(())
    }

    async fn collect_pipeline_metrics(&self, pipeline_id: Uuid) -> Result<(), PipelineError> {
        let pipeline = self.get_pipeline(&pipeline_id).await
            .ok_or_else(|| PipelineError::PipelineNotFound(pipeline_id))?;
        
        let mut pipeline_stats = PipelineStats {
            throughput: 0.0,
            latency: Duration::seconds(0),
            backpressure: 0.0,
            stage_stats: HashMap::new(),
        };

        for stage in &pipeline.stages {
            let stage_metrics = self.metrics_collector.get_stage_metrics(stage.id).await?;
            pipeline_stats.throughput += stage_metrics.throughput;
            pipeline_stats.latency = pipeline_stats.latency.max(stage_metrics.latency);
            pipeline_stats.backpressure = pipeline_stats.backpressure.max(stage_metrics.backpressure);
            pipeline_stats.stage_stats.insert(stage.id, StageStats {
                processing_time: stage_metrics.processing_time,
                output_rate: stage_metrics.output_rate,
                state_size: stage_metrics.state_size,
            });
        }

        self.update_execution_stats(pipeline_id, pipeline_stats).await;
        Ok(())
    }
}